re PR debug/42244 (var-tracking ICE for 300.twolf)

PR debug/42244
	* ddg.c (add_inter_loop_mem_dep): Use ANTI_DEP if from or to
	is a DEBUG_INSN.

	* gcc.dg/debug/pr42244.c: New test.

From-SVN: r155062